masonry layout fixed on small devices

--- a/css/my-style.css
+++ b/css/my-style.css
@@ -76,6 +76,9 @@ footer {
     margin: 15px 3px;
 }
 
+#masonry {
+    margin-top: 40px;
+}
 a[href^="mailto:"]
 { 
   color:#333;
